add styles to infos

--- a/style.css
+++ b/style.css
@@ -1,9 +1,49 @@
-body{
-    margin: 0;
+body {
+  margin: 0;
+  font-size: 16px;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 400;
+  /* background-size: 1%; */
+
+  background-repeat: no-repeat;
 }
-.box-1{
-    background:url(./images/bg-pattern-desktop.svg)
+.logo {
+  position: absolute;
+  top: 10%;
 }
-.container{
-    display: flex;
+
+.line1 {
+  font-weight: 200;
+  color: hsl(0, 36%, 70%);
+}
+
+h1 {
+  margin: 0;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 600;
+  font-size: 70px;
+  letter-spacing: 16px;
+  margin-bottom: 0%;
+  color: hsl(0, 6%, 24%);
+}
+p {
+  line-height: 30px;
+  color: hsl(0, 36%, 70%);
+}
+.container {
+  display: flex;
+  align-items: stretch;
+  height: 100vh;
+  flex-direction: row;
+}
+
+.box-1 {
+  background-image: url(./images/bg-pattern-desktop.svg);
+  background-size: 100% 100%;
+  flex: 1;
+  padding: 15% 20% 10% 15%;
+}
+
+.box-2 img {
+  height: 100%;
 }
