--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
+html {
+  height: 100vh;
+}
 body {
   margin: 0;
   font-size: 16px;
   font-family: "Josefin Sans", sans-serif;
   font-weight: 400;
-  /* background-size: 1%; */
-
-  background-repeat: no-repeat;
+  height: 100%;
 }
 .logo {
   position: absolute;
@@ -31,19 +32,43 @@ p {
   color: hsl(0, 36%, 70%);
 }
 .container {
+  height: 100%;
+  min-height: 100%;
   display: flex;
-  align-items: stretch;
-  height: 100vh;
   flex-direction: row;
 }
 
 .box-1 {
-  background-image: url(./images/bg-pattern-desktop.svg);
-  background-size: 100% 100%;
   flex: 1;
-  padding: 15% 20% 10% 15%;
+  background: url(./images/bg-pattern-desktop.svg);
+  background-size: 100% 100%;
+}
+.info {
+  margin: 10px;
+  padding: 25% 25% 10% 15%;
 }
 
-.box-2 img {
-  height: 100%;
+.image {
+  height: 100vh;
+}
+
+input {
+  height: 50px;
+  width: 80%;
+  border-radius: 30px;
+  font-size: 100%;
+  border: 1px solid hsl(0, 80%, 86%);
+}
+
+button {
+}
+
+footer {
+  position: absolute;
+  margin: 0;
+  bottom: 0%;
+  left: 10%;
+}
+footer p {
+  margin: 0;
 }
