design the email form

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
-html {
-  height: 100vh;
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+  outline: none;
 }
+html,
 body {
   margin: 0;
   font-size: 16px;
@@ -45,7 +49,11 @@ p {
 }
 .info {
   margin: 10px;
-  padding: 25% 25% 10% 15%;
+  padding: 20% 25% 5% 15%;
+}
+
+.info p {
+  padding-right: 110px;
 }
 
 .image {
@@ -54,13 +62,31 @@ p {
 
 input {
   height: 50px;
-  width: 80%;
+  width: 67%;
   border-radius: 30px;
   font-size: 100%;
   border: 1px solid hsl(0, 80%, 86%);
+  padding-left: 20px;
+  font-family: "Josefin Sans", sans-serif;
+  appearance: none;
+}
+.email-container {
+  position: relative;
+}
+button {
+  position: absolute;
+  border-radius: 30px;
+  width: 5.5rem;
+  height: 54px;
+  top: 0px;
+  right: 25%;
+  border: 0px;
+  background-image: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+  box-shadow: 8px 10px 30px rgba(128, 128, 128, 0.473);
 }
 
-button {
+button:hover {
+  background-image: linear-gradient(135deg, hsl(0, 80%, 90%), hsl(0, 74%, 90%));
 }
 
 footer {
