--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 .logo {
   position: absolute;
   top: 10%;
+  left: 10%;
 }
 
 .line1 {
@@ -60,6 +61,11 @@ p {
   height: 100vh;
 }
 
+.box-2 {
+  content: url(./images/hero-desktop.jpg);
+  max-width: 100%;
+}
+
 input {
   height: 50px;
   width: 67%;
@@ -98,3 +104,43 @@ footer {
 footer p {
   margin: 0;
 }
+
+@media (max-width: 1100px) {
+  body {
+    text-align: center;
+  }
+  h1 {
+    font-size: 45px;
+  }
+
+  .info p {
+    padding-right: 0px;
+  }
+  .container {
+    flex-direction: column;
+    flex-direction: column-reverse;
+  }
+  .box-2 {
+    content: url(./images/hero-mobile.jpg);
+    padding-top: 20%;
+    width: 100%;
+  }
+  .info {
+    padding: 10px;
+  }
+  button {
+    right: 7%;
+    width: 4rem;
+  }
+  .logo {
+    top: 3%;
+    height: 4%;
+  }
+  .topnav {
+    background-color: #666666;
+    width: 100%;
+  }
+  input {
+    width: 78%;
+  }
+} ;
